<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/desktop" >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dip"
           android:layout_marginTop="30dip"
           android:ellipsize="end"
           android:text="@string/aboutname"
           android:textColor="#000"
           android:textSize="15dp" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dip"
           android:layout_marginTop="10dip"
           android:ellipsize="end"
           android:text="@string/aboutemail"
           android:textColor="#000"
           android:textSize="15dp" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dip"
           android:layout_marginTop="10dip"
           android:ellipsize="end"
           android:text="@string/aboutversion"
           android:textColor="#000"
           android:textSize="15dp" />
      <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dip"
           android:layout_marginTop="30dip"
           android:ellipsize="end"
           android:text="@string/aboutstring"
           android:textColor="#000"
           android:textSize="20dp" />
      <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dip"
           android:layout_marginTop="10dip"
           android:ellipsize="end"
           android:text="@string/aboutstring2"
           android:textColor="#000"
           android:textSize="20dp" />
</LinearLayout>